--- a/gestor_proyectos/src/Myform.css
+++ b/gestor_proyectos/src/Myform.css
@@ -1,4 +1,5 @@
 .add-form{
+  margin: 20px;
   background-color: aliceblue;
   border-color: black;
   border-width: 5px;
@@ -6,4 +7,6 @@
   box-shadow: 0px 0px 10px black;
   border-radius: 0.5rem;
   padding: 10px 20px;
+  position: absolute;
+  left: 0px;
 }
